@@ -13,6 +13,9 @@ Version 1.9.0+svn:
    * Added event: side turn X
    * Added event: turn X refresh
    * Added [chat] tag for outputting public or private messages to the chat.
+   * Added events: turn end and turn X end_text
+   * Added events: side turn end, side X turn end, side turn X end, 
+     and side X turn Y end
  * Terrain WML:
    * Updated height adjust of desert, orcish, and snowy keeps.
 
